fonts added and spacing corrected

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 .menuApp__container {
   width: 80%;
+
   margin: 0 10%;
+  padding-bottom: 50px;
 }
 
 .menuApp__title {
-  font-size: 40px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+
+  font-size: 40px;
+  font-family: "Open Sans", sans-serif;
 }
