--- a/src/components/MenuSection/MenuSection.css
+++ b/src/components/MenuSection/MenuSection.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 .menuApp__MenuSection--detailsContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
   padding: 10px 0;
   border-bottom: 1px solid #cccccc;
+}
+
+.menuApp__MenuSection--detailsContainer:last-child {
+  border-bottom: none;
 }
 
 .menuApp__MenuSection--imageDetailsContainer {
@@ -12,38 +19,43 @@
 }
 
 .menuApp__MenuSection--image {
+  width: 80px;
+  height: 80px;
+
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 80px;
-  height: 80px;
 }
 
 .menuApp__MenuSection--title {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 20px;
 }
 
 .menuApp__MenuSection--nameDetails {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
   margin: 0;
+
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
 }
 
 .menuApp__MenuSection--descriptionDetails {
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: italic;
   margin: 0;
+
+  font-family: "Open Sans", sans-serif;
+  font-style: italic;
 }
 
 .menuApp__MenuSection--price {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 20px;
+
+  font-family: "Open Sans", sans-serif;
 }
 
 .menuApp__MenuSection--detailsTextContainer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   margin: 20px;
 }
